# recipe_site_generator

./: README.md  pyproject.toml  setup.py
recipe_site_generator/: custom.py  gemtext_recipe.py  ingredient.py
