[tool.poetry]
name = "recipe_site_generator"
version = "1.0"
description = "Generates browser documents from input recipe files"
authors = ["My-Tien Nguyen <my-tien@mails.taipei>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
tabulate = "0.9.0"
PyYAML = "6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
